fixtures/namespace_missing_default_deny_netpol-fixed.yml
apiVersion: v1
kind: Namespace
metadata:
  name: default
  creationTimestamp: null
spec: {}
status: {}
---
# https://github.com/ahmetb/kubernetes-network-policy-recipes/blob/master/07-allow-traffic-from-some-pods-in-another-namespace.md
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-allow-all-ns-monitoring
  namespace: default
  creationTimestamp: null
spec:
  podSelector:
    matchLabels:
      app: web
  ingress:
  - from:
    - namespaceSelector: # chooses all pods in namespaces labelled with team=operations
        matchLabels:
          team: operations
      podSelector: # chooses pods with type=monitoring
        matchLabels:
          type: monitoring
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: default-deny
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
